# gsd-tools

./: .gitignore  CONTRIBUTING.md  DEVELOP.md  LICENSE  LICENSE.md  README.md  SECURITY.md  TODO.md
.github/: CODEOWNERS
actions/: README.md
cloudflare-workers/: README.md  gsd-raw-file.js
data-sources/: README.md
docker-compose/: README.md  docker-compose.yml
gsd-analysis/: README.md  gsd_analysis.py  requirements.txt
gsd-api/: .gitignore  README.md  index.js  package.json  wrangler.toml
gsd-bot/: .env.sample  .gitignore  Dockerfile  README.md
gsd-github-actions/: README.md
gsd-importers/: README.md
gsd-libraries/python/: README.md  pyproject.toml
gsd-libraries/python/.devcontainer/: devcontainer.json
gsd-project/: .gitignore  README.md  TODO.md  Vulnerability Identifier Landscape.md
gsd-requests/: Dockerfile  README.md  app.js  package-lock.json  package.json
gsd-schema/: README.md  _headers
gsd-strategy/: Thoughts-on-data-formats.md
gsd-url-processing/: README.md  generate-uvis-test.py  related-standards.md  setup-macos.sh  setup-ubuntu.sh  uvi_classes.py
gsd-web/: .babelrc  .env.sample  .gitignore  Jakefile  README.md  package.json  quasar.conf.js
gsd-web-demo/: README.md  package.json  quasar.conf.js
local-scripts/: README.md  add-suse-CVEs-to-GSD.sh  print-json.py
securitylist/: .gitignore  README.md  setup.py
uvi-bot/: .gitignore  Dockerfile  README.md  bot.py  requirements.txt  setup.cfg  setup.py
webform/: README.md  app.js  package-lock.json  package.json
website/: .gitignore  Gemfile  README.md  _config.yml  about.md  (+5 more)
(+190 files in other folders)
